[package]
name = "multiarray"
version = "0.1.0"
authors = ["Sebastian Gesemann <s.gesemann@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/sellibitze/multiarray.git"
homepage = "https://github.com/sellibitze/multiarray"
description = "Small Rust library for handling multi-dimensional data"
keywords = ["array", "multidimensional", "multi-dimensional", "slice"]

[dependencies]
anyrange = "^0.1.0"
